objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Bharath_Asset__c</fullName>
        <label>Bharath Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LT_Asset__c</fullName>
        <label>LT Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPI_Asset__c</fullName>
        <label>MPI Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSWT__c</fullName>
        <label>NSWT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Asset__c</fullName>
        <label>OC Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optus_Asset__c</fullName>
        <label>Optus Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PnG_Asset__c</fullName>
        <label>PnG Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pru_Asset__c</fullName>
        <label>Pru Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBCC_Asset__c</fullName>
        <label>QBCC Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roojai_Asset__c</fullName>
        <label>Roojai Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Asset__c</fullName>
        <label>SM Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sarah_Asset__c</fullName>
        <label>Sarah Asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>berlitz_asset__c</fullName>
        <label>berlitz asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>foxtel_asset__c</fullName>
        <label>foxtel asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iselect_asset__c</fullName>
        <label>iselect asset</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>